cncProd/force-app/main/default/objects/Used_Car_Vehicle_Stock__c/Used_Car_Vehicle_Stock__c.object-meta.xml
<CustomObject>
    <description>Vehicle Stock Master for Republic Auto (RA) Used Car</description>
    <label>Used Car Vehicle Stock</label>
    <nameField>
        <displayFormat>UCVS-{0000000}</displayFormat>
        <label>Used Car Vehicle Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Used Car Vehicle Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>