cncProd/force-app/main/default/objects/Used_Car_Vehicle_Stock__c/fields/Age_of_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Vehicle__c</fullName>
    <label>Age of Vehicle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>