cncProd/force-app/main/default/objects/Used_Car_Vehicle_Stock__c/fields/COE__c.field-meta.xml
<CustomField>
    <fullName>COE__c</fullName>
    <label>COE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>