cncProd/force-app/main/default/objects/Used_Car_Vehicle_Stock__c/fields/No_owner__c.field-meta.xml
<CustomField>
    <fullName>No_owner__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No owner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>