cncProd/force-app/main/default/objects/Used_Car_Vehicle_Stock__c/fields/Person_Account_Profiling__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Profiling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Account Profiling</label>
    <referenceTo>Person_Account_Profiling__c</referenceTo>
    <relationshipLabel>Used Car Vehicle Stocks</relationshipLabel>
    <relationshipName>Used_Car_Vehicle_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>