cncProd/force-app/main/default/objects/Used_Car_Vehicle_Stock__c/fields/Purchase_Status__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Status__c</fullName>
    <label>Purchase Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>