cncProd/force-app/main/default/objects/Used_Car_Vehicle_Stock__c/fields/Registered_Number__c.field-meta.xml
<CustomField>
    <fullName>Registered_Number__c</fullName>
    <label>Registered Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>