cncProd/force-app/main/default/objects/Used_Car_Vehicle_Stock__c/fields/Stock_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>Stock_Sold_Date__c</fullName>
    <label>Stock Sold Date</label>
    <type>Date</type>
</CustomField>