cncProd/force-app/main/default/objects/Used_Car_Vehicle_Stock__c/fields/Used_Car_Vehicle_Stock_Imagine_URL__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Vehicle_Stock_Imagine_URL__c</fullName>
    <defaultValue>&quot;https://www.cyclecarriage.com/sg/republic-auto/-/media/themes/ra/republicauto/republicauto/images/default_v5.jpg&quot;</defaultValue>
    <label>Used Car Vehicle Stock Imagine URL</label>
    <type>Url</type>
</CustomField>