cncProd/force-app/main/default/objects/Used_Car_Vehicle_Stock__c/fields/Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Status__c</fullName>
    <label>Vehicle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RA_Vehicle_Status</valueSetName>
    </valueSet>
</CustomField>