cncProd/force-app/main/default/objects/Used_Car_Vehicle_Stock__c/recordTypes/RA_Used_Car_Vehicle_Stock_RT.recordType-meta.xml
<RecordType>
    <fullName>RA_Used_Car_Vehicle_Stock_RT</fullName>
    <active>true</active>
    <label>RA Used Car Vehicle Stock RT</label>
</RecordType>